--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.33.0"
+    "@playwright/test": "^1.33.0",
+    "axe-html-reporter": "^2.2.3"
   },
   "dependencies": {
     "@axe-core/playwright": "^4.7.0"
